SSCSFT-68 Covering letter not referencing all parties to a case
Ensure unit test coverage.